--- a/AloTraWebsite/src/main/resources/templates/shipper/shipper-statistics.html
+++ b/AloTraWebsite/src/main/resources/templates/shipper/shipper-statistics.html
@@ -107,6 +107,9 @@
             </tr>
           </tfoot>
         </table>
+        <nav class="mt-3">
+  <ul id="historyPagination" class="pagination justify-content-center"></ul>
+</nav>
       </div>
     </div>
 
